Dune test superclass - create game, factions and TestTopics in one place (#1203)