@@ -1,5 +1,6 @@
 package model;
 
+import exceptions.InvalidGameStateException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -9,19 +10,18 @@ import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class TerritoriesTest {
-    Game game;
+public class TerritoriesTest extends DuneTest {
     Territories territories;
 
     @BeforeEach
-    void setUp() throws IOException {
-        game = new Game();
+    void setUp() throws IOException, InvalidGameStateException {
+        super.setUp();
         territories = game.getTerritories();
     }
 
     @Test
     void getTerritoryValidSectorName() {
-        assertEquals(18, territories.getTerritory("Cielago North (West Sector)").getSector());
+        assertEquals(18, cielagoNorth_westSector.getSector());
     }
 
     @Test
@@ -65,6 +65,8 @@ public class TerritoriesTest {
         List<List<Territory>> territorySectorsList = territories.getAggregateTerritoryList("Meridian", 9);
         assertEquals(1, territorySectorsList.size());
         assertEquals(2, territorySectorsList.getFirst().size());
+        assertTrue(territorySectorsList.getFirst().contains(meridian_westSector));
+        assertTrue(territorySectorsList.getFirst().contains(meridian_eastSector));
         assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Meridian (West Sector)")));
         assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Meridian (East Sector)")));
     }
@@ -74,9 +76,9 @@ public class TerritoriesTest {
         List<List<Territory>> territorySectorsList = territories.getAggregateTerritoryList("Cielago North", 10);
         assertEquals(1, territorySectorsList.size());
         assertEquals(3, territorySectorsList.getFirst().size());
-        assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (West Sector)")));
-        assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (Center Sector)")));
-        assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (East Sector)")));
+        assertTrue(territorySectorsList.getFirst().contains(cielagoNorth_westSector));
+        assertTrue(territorySectorsList.getFirst().contains(cielagoNorth_middleSector));
+        assertTrue(territorySectorsList.getFirst().contains(cielagoNorth_eastSector));
     }
 
     @Test
@@ -84,8 +86,9 @@ public class TerritoriesTest {
         List<List<Territory>> territorySectorsList = territories.getAggregateTerritoryList("Cielago North", 2);
         assertEquals(1, territorySectorsList.size());
         assertEquals(2, territorySectorsList.getFirst().size());
-        assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (West Sector)")));
-        assertTrue(territorySectorsList.getFirst().stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (Center Sector)")));
+        assertTrue(territorySectorsList.getFirst().contains(cielagoNorth_westSector));
+        assertTrue(territorySectorsList.getFirst().contains(cielagoNorth_middleSector));
+        assertFalse(territorySectorsList.getFirst().contains(cielagoNorth_eastSector));
     }
 
     @Test
@@ -94,8 +97,10 @@ public class TerritoriesTest {
         assertEquals(2, territorySectorsList.size());
         assertEquals(1, territorySectorsList.get(0).size());
         assertEquals(1, territorySectorsList.get(1).size());
-        assertTrue(territorySectorsList.get(0).stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (West Sector)")));
-        assertTrue(territorySectorsList.get(1).stream().anyMatch(t -> t.getTerritoryName().equals("Cielago North (East Sector)")));
+        assertTrue(territorySectorsList.getFirst().contains(cielagoNorth_westSector));
+        assertFalse(territorySectorsList.getFirst().contains(cielagoNorth_middleSector));
+        assertTrue(territorySectorsList.getLast().contains(cielagoNorth_eastSector));
+        assertFalse(territorySectorsList.getLast().contains(cielagoNorth_middleSector));
     }
 
     @Test
@@ -104,16 +109,16 @@ public class TerritoriesTest {
         assertEquals(2, territorySectorsList.size());
         assertEquals(3, territorySectorsList.get(0).size());
         assertEquals(1, territorySectorsList.get(1).size());
-        assertTrue(territorySectorsList.get(0).stream().anyMatch(t -> t.getTerritoryName().equals("False Wall East (Far South Sector)")));
-        assertTrue(territorySectorsList.get(0).stream().anyMatch(t -> t.getTerritoryName().equals("False Wall East (South Sector)")));
-        assertTrue(territorySectorsList.get(0).stream().anyMatch(t -> t.getTerritoryName().equals("False Wall East (Middle Sector)")));
-        assertTrue(territorySectorsList.get(1).stream().anyMatch(t -> t.getTerritoryName().equals("False Wall East (Far North Sector)")));
+        assertTrue(territorySectorsList.getFirst().contains(falseWallEast_farSouthSector));
+        assertTrue(territorySectorsList.getFirst().contains(falseWallEast_southSector));
+        assertTrue(territorySectorsList.getFirst().contains(falseWallEast_middleSector));
+        assertTrue(territorySectorsList.getLast().contains(falseWallEast_farNorthSector));
     }
 
     @Test
     void fighterNamesInAggTerritoryTwoFighters() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 1);
-        game.getTerritory("Cielago North (East Sector)").addForces("Atreides", 1);
+        cielagoNorth_westSector.addForces("Fremen", 1);
+        cielagoNorth_eastSector.addForces("Atreides", 1);
         List<Territory> territorySectors = territories.getAggregateTerritoryList("Cielago North", 10).getFirst();
         Set<String> fighterNames = territories.getFighterNamesInAggTerritory(territorySectors);
         assertEquals(2, fighterNames.size());
@@ -121,8 +126,8 @@ public class TerritoriesTest {
 
     @Test
     void fighterNamesInAggTerritoryFighterAndAdvisor() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 1);
-        game.getTerritory("Cielago North (East Sector)").addForces("Advisor", 1);
+        cielagoNorth_westSector.addForces("Fremen", 1);
+        cielagoNorth_eastSector.addForces("Advisor", 1);
         List<Territory> territorySectors = territories.getAggregateTerritoryList("Cielago North", 10).getFirst();
         Set<String> fighterNames = territories.getFighterNamesInAggTerritory(territorySectors);
         assertEquals(1, fighterNames.size());
@@ -130,7 +135,7 @@ public class TerritoriesTest {
 
     @Test
     void fighterNamesInAggTerritoryFighterAlone() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 1);
+        cielagoNorth_westSector.addForces("Fremen", 1);
         List<Territory> territorySectors = territories.getAggregateTerritoryList("Cielago North", 10).getFirst();
         Set<String> fighterNames = territories.getFighterNamesInAggTerritory(territorySectors);
         assertEquals(1, fighterNames.size());
@@ -138,8 +143,8 @@ public class TerritoriesTest {
 
     @Test
     void fighterNamesInAggTerritoryFighterAloneWithSpecial() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 1);
-        game.getTerritory("Cielago North (East Sector)").addForces("Fremen*", 1);
+        cielagoNorth_westSector.addForces("Fremen", 1);
+        cielagoNorth_eastSector.addForces("Fremen*", 1);
         List<Territory> territorySectors = territories.getAggregateTerritoryList("Cielago North", 10).getFirst();
         Set<String> fighterNames = territories.getFighterNamesInAggTerritory(territorySectors);
         assertEquals(1, fighterNames.size());
@@ -147,9 +152,9 @@ public class TerritoriesTest {
 
     @Test
     void fighterNamesInAggTerritoryRicheseNoField() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 1);
-        game.getTerritory("Cielago North (East Sector)").addForces("BG", 1);
-        game.getTerritory("Cielago North (Center Sector)").setRicheseNoField(3);
+        cielagoNorth_westSector.addForces("Fremen", 1);
+        cielagoNorth_eastSector.addForces("BG", 1);
+        cielagoNorth_middleSector.setRicheseNoField(3);
         List<Territory> territorySectors = territories.getAggregateTerritoryList("Cielago North", 10).getFirst();
         Set<String> fighterNames = territories.getFighterNamesInAggTerritory(territorySectors);
         assertEquals(3, fighterNames.size());
@@ -157,9 +162,9 @@ public class TerritoriesTest {
 
     @Test
     void noFighterNamesInPolarSink() {
-        game.getTerritory("Polar Sink").addForces("Fremen", 1);
-        game.getTerritory("Polar Sink").addForces("BG", 1);
-        game.getTerritory("Polar Sink").setRicheseNoField(3);
+        polarSink.addForces("Fremen", 1);
+        polarSink.addForces("BG", 1);
+        polarSink.setRicheseNoField(3);
         List<Territory> territorySectors = territories.getAggregateTerritoryList("Polar Sink", 10).getFirst();
         Set<String> fighterNames = territories.getFighterNamesInAggTerritory(territorySectors);
         assertEquals(0, fighterNames.size());
@@ -167,16 +172,16 @@ public class TerritoriesTest {
 
     @Test
     void fighterNamesInAggTerritoryFightersSeparatedByStorm() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 3);
-        game.getTerritory("Cielago North (East Sector)").addForces("BG", 1);
+        cielagoNorth_westSector.addForces("Fremen", 3);
+        cielagoNorth_eastSector.addForces("BG", 1);
         List<Territory> territorySectorsBefore = territories.getAggregateTerritoryList("Cielago North", 1).getFirst();
         assertEquals(1, territories.getFighterNamesInAggTerritory(territorySectorsBefore).size());
     }
 
     @Test
     void fighterNamesInAggTerritoryFightersSeparatedByStorm2() {
-        game.getTerritory("Cielago North (West Sector)").addForces("Fremen", 3);
-        game.getTerritory("Cielago North (East Sector)").addForces("BG", 1);
+        cielagoNorth_westSector.addForces("Fremen", 3);
+        cielagoNorth_eastSector.addForces("BG", 1);
         List<Territory> territorySectorsAfter = territories.getAggregateTerritoryList("Cielago North", 1).get(1);
         assertEquals(1, territories.getFighterNamesInAggTerritory(territorySectorsAfter).size());
     }
